# LicenseSystem

./: .gitignore  Cargo.toml  README.md
docs/: API.md  ARCHITECTURE.md  BUILD_AND_TEST.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  release-checklist.md  商业软件License架构设计方案.docx
docs/runbooks/: customer-license-support.md  git-history-secret-cleanup.md  key-rotation-and-incident.md  online-operations.md
docs/steps/: 00-design-freeze.md  01-offline-core.md  02-product-integration.md  03-machine-and-time.md  04-online-services.md  04b-sqlite-persistence.md  04c-security-operations.md  05-hardening-and-release.md  06-documentation-and-handoff.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: license_decode.rs
keys/: rsa_private.der  rsa_public.der
licenses/: license.json  license.sig  license_rsa.sig  payload.example.json
release/: package-allowlist.md
scripts/: check_markdown_links.ps1  release_secret_audit.ps1  verify_license_vector.py
src/: aes.rs  ecdsa.rs  lib.rs  main.rs  rsa.rs
src/demo_sdk/: algorithm.rs  device.rs  error.rs  mod.rs  model.rs  scheduler.rs
src/license/: cbor.rs  error.rs  governance.rs  mod.rs  model.rs  signing.rs  validation.rs
src/machine/: mod.rs  normalize.rs  windows.rs
src/online/: admin.rs  client.rs  error.rs  http.rs  mod.rs  model.rs  operations.rs  service.rs  sqlite.rs  token.rs
src/time_anchor/: mod.rs  protector.rs  store.rs
tests/: demo_sdk.rs  governed_cli.rs  license_core.rs  license_governance.rs  license_parser_robustness.rs  machine_identity.rs  online_admin.rs  online_backup.rs  online_http.rs  online_service.rs  online_sqlite.rs  time_anchor.rs
tests/vectors/: ed25519-v1.json
