[package]
name = "LicenseSystem"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.11", features = ["getrandom", "zeroize"] }
base64 = "0.22"
windows-sys = {
    version = "0.61.2",
    features = ["Win32_System_Console"]
}
p256 = {
    version = "0.13",
    features = ["ecdsa"]
}

rand_core = {
    version = "0.6",
    features = ["getrandom"]
}
serde = {
    version = "1",
    features = ["derive"]
}
serde_json = "1"
rsa = {
    version = "0.9.10",
    features = ["sha2"]
}
sha2 = {
    version = "0.10",
    features = ["oid"]
}
rand = "0.8.0"
