[package]
name = "LicenseSystem"
version = "0.1.0"
edition = "2024"

[lib]
name = "license_system"
path = "src/lib.rs"

[dependencies]
aes-gcm = { version = "0.11", features = ["getrandom", "zeroize"] }
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22"
windows-sys = {
    version = "0.61.2",
    features = [
        "Win32_Foundation",
        "Win32_Security_Cryptography",
        "Win32_Storage_FileSystem",
        "Win32_System_Console",
        "Win32_System_SystemInformation"
    ]
}
p256 = {
    version = "0.13",
    features = ["ecdsa"]
}

rand_core = {
    version = "0.6",
    features = ["getrandom"]
}
serde = {
    version = "1",
    features = ["derive"]
}
serde_json = "1"
rsa = {
    version = "0.9.10",
    features = ["sha2"]
}
sha2 = {
    version = "0.10",
    features = ["oid"]
}
rand = "0.8.0"
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
subtle = "2.6.1"
ed25519-dalek = "3.0.0"
hmac = "0.12.1"
minicbor = { version = "2.2.2", features = ["std"] }
semver = "1.0.28"
time = { version = "0.3.53", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
uuid = { version = "1.23.5", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "symbols"
